syntax = "proto3";

import "common.proto";

package markets;

service MarketService {
    rpc GetMarketData(common.PageRequest) returns (GetPaginatedMarketResponse);    
    rpc GetMarketById(GetMarketByIdRequest) returns (Market);
}

message GetMarketByIdRequest {
    string market_id = 1;
}

enum MarketStatus {
    UNSPECIFIED_MARKET_STATUS = 0;
    OPEN = 1;
    CLOSED = 2;
    SETTLED = 3;
}

enum Outcome {
    UNSPECIFIED_OUTCOME = 0;
    YES = 1;
    NO = 2;
    UNSPECIFIED = 3;
}

message Market {
    string id = 1;
    string name = 2;
    string description = 3;
    string logo = 4;
    MarketStatus status = 5;    
    double liquidity_b = 6;
    Outcome final_outcome = 7;
    string created_at = 8;
    string updated_at = 9;
    string market_expiry = 10;
    float yes_price = 11;
    float no_price = 12;
}

message GetPaginatedMarketResponse {
    repeated Market markets = 1;
    common.PageInfo pageInfo = 2;
}