syntax = "proto3";

package common;

message PageInfo {
    uint64 page = 1;
    uint64 page_size = 2;
    uint64 total_items = 3;
    uint64 total_pages = 4;
}

message PageRequest {
    uint64 page = 1;
    uint64 page_size = 2;
}